# timer

./: CMakeLists.txt  README.md  timer.pro
include/: timer.h
src/: timer.c  timer.cc
test/: timer_test.c
